--- a/portfolio.css
+++ b/portfolio.css
@@ -234,3 +234,30 @@ a:hover {
   background-color: ;
   padding-left: 20px;
 }
+
+form {
+  margin-top:50px;
+  transition: all 4s ease-in-out;
+}
+
+.form-control {
+  width: 600px;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  color: #fff;
+  font-size:18px;
+  margin-bottom: 16px;
+}
+
+form .submit {
+  background: #ff5722;
+  border-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 50px;
+  margin-top: 20px;
+}
