--- a/portfolio.css
+++ b/portfolio.css
@@ -128,11 +128,11 @@ header img {
 .hero-text4 {
   text-align: center;
   position: absolute;
-  top: 55%;
+  top: 75%;
   left: 85%;
   transform: translate(-50%, -50%);
   color: white;
-
+  background-color: white;
 }
 
 #container {
